@@ -15,6 +15,7 @@ Changelog for 1.3.20
 * Removed broken cash-basis reports (Chris T, h/t Jigme D
 * Backporting LedgerSMB::App_State to make other backports easier (Chris T)
 * Fixed Customer/Vendor search results unsorted (Chris T, h/t lbm, 3537592)
+* Income Statement/Balance sheet now pass through date ranges (Chris T)
 
 Andres B is Andres Basile
 Brian W is Brian Wolf
